2003-06-14  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/tex-mode.el (tex-compile-commands):
	Handle tex-start-commands like tex-start-tex does.

	* cus-edit.el (custom-get-fresh-buffer): Kill overlays before erasing
	the buffer.

2003-06-13  Ilya N. Golubev  <gin@mo.msk.ru>  (tiny change)

	* shell.el (shell-command-separator-regexp): New variable.
	(shell-directory-tracker): Make regexp used for skipping to next
	command correspond to one used for command itself.

2003-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>  (tiny change)

	* textmodes/texinfmt.el (texinfo-format-scan):
	Silence `whitespace-cleanup'.

2003-06-12  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/timeclock.el (display-time-hook)
	(timeclock-modeline-display): Define for byte-compiler.
	(timeclock-time-to-date, timeclock-workday-remaining)
	(timeclock-time-to-seconds, timeclock-seconds-to-time):
	Move earlier in the file so defined before used.
	(timeclock-status-string): No need for `let*' so use `let'.
	(timeclock-query-out): Always return a non-nil value.

2003-06-10  Rajesh Vaidheeswarran  <rv@gnu.org>

	* whitespace.el (whitespace-version): Bump to 3.3
	(whitespace-cleanup): Respect user preference for silence

	* whitespace.el: Remove :tag in commentary :link.  Remove empty
	lines in comment, since commentary seems to have a problem with that.

2003-06-09  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/tex-mode.el (tex-search-noncomment): New macro.
	(tex-last-unended-begin, tex-next-unmatched-end): Use it
	so we don't get confused by \begin and \end in comments.
	(tex-compile): Change dir before calling tex-compile-default.

2003-06-09  Luc Teirlinck  <teirllm@mail.auburn.edu>

	* bindings.el (global-map): Bind `kill-whole-line' to
	C-S-<backspace>.  Remove M-S-<backspace> binding: too close to
	C-M-<backspace>.

	* dired.el (dired-re-dot): Make it handle trailing /.
	(dired-get-filename): Update documentation string.
	Revert previous change and fix typo in earlier version.
